docs/source/release/v3.9.0/index.rst
.. _v3.9.0:

==========================
Mantid 3.9.0 Release Notes
==========================

.. figure:: ../../images/release39.png
   :class: screenshot
   :width: 550px
   :align: right

   The Slice Viewer now is able to display data with non orthogonal axes

.. contents:: Table of Contents
   :local:

We are proud to announce version 3.9 of Mantid. This release contains the long awaited ability to visualise non orthogonal crystal systems correctly in the slice viewer, as well as partial project saving in the Mantidplot interface.

These are just two of many improvements in this release, so please take a
look at the release notes, which are filled with details of the
important changes and improvements in many areas. The development team
has put a great effort into making all of these improvements within
Mantid, and we would like to thank all of our beta testers for their
time and effort helping us to make this another reliable version of Mantid.

Throughout the Mantid project we put a lot of effort into ensuring
Mantid is a robust and reliable product. Thank you to everyone that has
reported any issues to us. Please keep on reporting any problems you
have, or crashes that occur on our `forum`_.

Installation packages can be found on our `download page`_
which now links to sourceforge to mirror our download files around the world, you can also
access the source code on `GitHub release page`_.

This is the last version to support RedHat Enterprise Linux 6 (RHEL6).

Citation
--------

Please cite any usage of Mantid as follows:

- *O. Arnold, et al., Mantid—Data analysis and visualization package for neutron scattering and μSR experiments, Nuclear Instruments and Methods in Physics Research Section A, Volume 764, 11 November 2014, Pages 156-166*, doi: `10.1016/j.nima.2014.07.029 <http://dx.doi.org/10.1016/j.nima.2014.07.029>`_

If you want to cite this specific release please use:

- *Mantid 3.9: Manipulation and Analysis Toolkit for Instrument Data.; Mantid Project*. doi: http://dx.doi.org/10.5286/SOFTWARE/MANTID3.9
  `Full author list <http://data.datacite.org/10.5286/SOFTWARE/MANTID3.9>`_

Changes
-------

.. toctree::
   :titlesonly:

   Framework <framework>
   User Interface & Usability <ui>
   Direct Inelastic <direct_inelastic>
   Indirect Inelastic <indirect_inelastic>
   SANS <sans>
   Diffraction <diffraction>
   Imaging <imaging>
   Muon Analysis <muon>
   Reflectometry <reflectometry>

Full Change Listings
--------------------

For a full list of all issues addressed during this release please see the `GitHub milestone`_.

.. _download page: http://download.mantidproject.org

.. _forum: http://forum.mantidproject.org

.. _GitHub milestone: http://github.com/mantidproject/mantid/pulls?utf8=%E2%9C%93&q=is%3Apr+milestone%3A%22Release+3.9%22+is%3Aclosed

.. _GitHub release page: https://github.com/mantidproject/mantid/releases/tag/v3.9.0
